remove shiro-spring-boot-starter

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,8 @@ spring:
       ddl-auto: update
   profiles:
     include: shiro-white-list
+  main:
+    allow-bean-definition-overriding: true
 
 shiro:
   loginUrl: login.html
