--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,13 +12,14 @@ spring:
       ddl-auto: update
   profiles:
     include: shiro-white-list
-  main:
-    allow-bean-definition-overriding: true
-
-shiro:
-  loginUrl: login.html
-  web:
-    enabled: true
 
 server:
   port: 8881
+  servlet:
+    session:
+      timeout: 1
+logging:
+  level:
+    org:
+      apache:
+        shiro: debug
